# vsmm

./: .gitignore  README.md  pyproject.toml
vsmm/: app_config.py  config.json  main.py  text_stripper.py
vsmm/api/: client.py
vsmm/manager/: file.py  mod.py  profile.py
vsmm/signalling/: observer.py
