[tool.poetry]
name = "vsmm"
version = "0.1.0"
description = "Vintage Story Mod Manager"
authors = ["Thom Lam <thom.lambert@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
requests = "^2.28.1"
customtkinter = "^5.0.1"
python-configuration = "^0.8.2"
pydantic = "^1.10.2"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-mock = "^3.10.0"
pyinstaller = "^5.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
